--- a/Capstone Modeling.ipynb
+++ b/Capstone Modeling.ipynb
@@ -22,10 +22,6 @@
     "2. [Importing Libraries and Files](#import_data)\n",
     "3. [Eploratory Data Analysis](#EDA)\n",
     "4. [Modeling with XGBoost](#modeling)\n",
-    "<ul>\n",
-    "     <li><a href=\"#xgboost\">XGBoost</a></li>\n",
-    "     <li><a href=\"#random_forest\">Random Forest</a></li>\n",
-    "</ul>\n",
     "5. [Predictions an Submission](#predictions)\n",
     "6. [Conclusion](#conclusion)\n"
    ]
@@ -1797,16 +1793,7 @@
    "metadata": {},
    "source": [
     "<a id='modeling'></a>\n",
-    "### Modeling"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "05e90364",
-   "metadata": {},
-   "source": [
-    "<a id='xgboost'></a>\n",
-    "### XGBoost"
+    "### XGBoost Modeling"
    ]
   },
   {
@@ -2152,7 +2139,9 @@
    "cell_type": "code",
    "execution_count": 63,
    "id": "110709b6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2202,101 +2191,6 @@
     "                                           train_labels.values)], \n",
     "                                eval_metric='auc')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16b69d61",
-   "metadata": {},
-   "source": [
-    "<a id='random_forest'></a>\n",
-    "### Random Forest Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "a80691a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# importing desired libraries for the RF model\n",
-    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.model_selection import cross_val_predict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "d617eb0d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize the imputer with the mean\n",
-    "imputer = SimpleImputer(strategy='mean')\n",
-    "\n",
-    "# Fit the imputer on the training data and transform both the training and test data\n",
-    "X_train_imputed = imputer.fit_transform(X_train)\n",
-    "X_test_imputed = imputer.transform(X_test)\n",
-    "\n",
-    "# Initialize and fit the Random Forest model on the imputed data\n",
-    "rf_class = RandomForestClassifier(n_estimators=100, random_state=1)\n",
-    "rf_class_fit = rf_class.fit(X_train_imputed, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "4dc575c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate predictions from the Random Forest model using the test dataset\n",
-    "rf_pred = rf_class.predict_proba(X_test_imputed)[:, 1]\n",
-    "\n",
-    "# Generate predictions from the XGBoost model using the test dataset\n",
-    "xg_pred = b_xg_class_fit.predict_proba(X_test)[:, 1]\n",
-    "\n",
-    "# Create a new feature matrix with the Random Forest predictions\n",
-    "stacking_features = np.column_stack((xg_pred, rf_pred))\n",
-    "\n",
-    "# Generate predictions from the meta-model using the new feature matrix and the target variable\n",
-    "mm_pred = mm_fit.predict(stacking_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "7a70812f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 0 0 ... 0 0 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mm_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0df33757",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2908c45",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2504,7 +2398,7 @@
     "<a id='conclusion'></a>\n",
     "### Conclusion\n",
     "\n",
-    "The above is basic, initial EDA and XGBoost modeling of the data supplied for this project. This model scored .725\n",
+    "The above is basic, initial EDA and XGBoost modeling of the data supplied for this project. This model scored .725 on Kaggle's AUC scoring.\n",
     "\n",
     "**Takeaways:**  \n",
     "* Age appears to have the highest correlation to the target variable\n",
